# Reloj-qt6

./: CMakeLists.txt  main.cpp
qml/: main.qml
src/: backend.cpp  backend.hpp
